NOJIRA: Updated comments for STREAMING section
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7135 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/config.properties
+++ b/docs/felix/conf/config.properties
@@ -217,9 +217,11 @@ org.opencastproject.security.digest.user=matterhorn_system_account
 org.opencastproject.security.digest.pass=CHANGE_ME
 
 # STREAMING
-# Following the instructions: http://opencast.jira.com/wiki/display/MH/Red5+installation
+# The streaming URL of the Red5 server. 
+# Ususally "rtmp://<SERVER_URL>/matterhorn-engage". 
+# ${SERVER_URL} can not be used, because it is a HTTP URL
 org.opencastproject.streaming.url=rtmp://localhost/matterhorn-engage
-# example: org.opencastproject.streaming.directory=/opt/matterhorn/red5/webapps/matterhorn/streams
+# The directory where the matterhorn streaming app for Red5 stores the streams
 org.opencastproject.streaming.directory=${org.opencastproject.storage.dir}/streams
 
 # DISTRIBUTION
