MH-3864 and MH-3865 -- added support for multiple watch directories.  Feeds are now registered by placing the feed's service registration file in load/feeds.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7175 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-search-service-feeds/pom.xml
+++ b/modules/matterhorn-search-service-feeds/pom.xml
@@ -18,6 +18,24 @@
       <version>0.9-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.fileinstall</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.osgi.compendium</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
     </dependency>
@@ -55,13 +73,10 @@
           <instructions>
             <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
             <Import-Package>
-              org.opencastproject.feed.impl
+              org.opencastproject.feed.impl, *
             </Import-Package>
             <Service-Component>
-              OSGI-INF/aggregation-feed.xml,
-              OSGI-INF/custom-feed.xml,
-              OSGI-INF/latest-feed.xml,
-              OSGI-INF/series-feed.xml
+              OSGI-INF/feed-scanner.xml
             </Service-Component>
           </instructions>
         </configuration>
