MH-3897 updating site report generation for matterhorn-engage-player
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7188 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-engage-player/pom.xml
+++ b/modules/matterhorn-engage-player/pom.xml
@@ -135,7 +135,7 @@
 			</build>
 		</profile>
 
-<!-- mvn -P shared-resources , copies only files needed for engage-ui  -->
+<!-- mvn -P shared-resources , copies only files needed for matterhorn-engage-ui  -->
 		<profile>
 			<id>shared-resources</id>
 			<build>
@@ -212,8 +212,8 @@
 							<report>asdoc-report</report>
 						</reports>
 						<configuration>
-							<windowTitle>Opencast Matterhorn Media Player API Doc</windowTitle>
-							<footer>Opencast Matterhorn </footer>
+							<windowTitle>Opencast Matterhorn Videodisplay API Doc</windowTitle>
+							<footer>Opencast Matterhorn</footer>
 							<configFile>
                     ${basedir}/asdoc-config.xml
                     </configFile>
@@ -240,7 +240,7 @@
 					<reportSet>
 						<reports>
 							<!-- include the desired reports -->
-							<!--<report>jslint</report>-->
+							<report>jslint</report>
 							<report>jsdoc</report>
 						</reports>
 					</reportSet>
