MH-3904: Can enable/disable confidence monitoring in the configuration
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7200 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
+++ b/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
@@ -52,6 +52,9 @@ capture.cleaner.maxarchivaldays=1
 # confidence monitoring outputs images to this directory
 capture.confidence.video.location=${org.opencastproject.storage.dir}/volatile/
 
+# enable/disable confidence monitoring
+capture.confidence.enable=false
+
 # The following lines create three example inputs for the capture agent, often
 # refered to as the "mock agent" for testing purposes.  Each input consists of:
 # 1:  The source, in this case a file which is listed in the project pom.xml 
