MH-3863 -- renamed receipt module to remote, since it now contains more than just receipts for async communication
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7208 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-analysis-api/pom.xml
+++ b/modules/matterhorn-analysis-api/pom.xml
@@ -24,7 +24,7 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-receipt-api</artifactId>
+      <artifactId>matterhorn-remote-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
     <dependency>
