--- a/modules/matterhorn-analysis-dictionary/pom.xml
+++ b/modules/matterhorn-analysis-dictionary/pom.xml
@@ -29,7 +29,7 @@
 
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-receipt-api</artifactId>
+      <artifactId>matterhorn-remote-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
 
