--- a/modules/matterhorn-composer-service-api/pom.xml
+++ b/modules/matterhorn-composer-service-api/pom.xml
@@ -31,7 +31,7 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-receipt-api</artifactId>
+      <artifactId>matterhorn-remote-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
     <dependency>
