--- a/modules/matterhorn-composer-service-remote/pom.xml
+++ b/modules/matterhorn-composer-service-remote/pom.xml
@@ -34,7 +34,7 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-receipt-impl</artifactId>
+      <artifactId>matterhorn-remote-impl</artifactId>
       <version>0.9-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
@@ -94,7 +94,7 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-receipt-impl</artifactId>
+      <artifactId>matterhorn-remote-impl</artifactId>
       <version>0.9-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
