--- a/modules/matterhorn-inspection-service-api/pom.xml
+++ b/modules/matterhorn-inspection-service-api/pom.xml
@@ -19,7 +19,7 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-receipt-api</artifactId>
+      <artifactId>matterhorn-remote-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
   </dependencies>
