--- a/modules/matterhorn-util/pom.xml
+++ b/modules/matterhorn-util/pom.xml
@@ -87,9 +87,7 @@
             <Import-Package> !com.sun.*, *;resolution:=optional </Import-Package>
             <Embed-Dependency>
               freemarker;inline=true,
-              opencast-truezip;inline=true,
-              signpost-core;inline=true,
-              signpost-commonshttp4;inline=true
+              opencast-truezip;inline=true
             </Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
           </instructions>
