MH-3939: started to add methods for autocomplete search.
Moved JPA implementation of Series to this module, because of some JPA OSGI issues.

git-svn-id: http://opencast.jira.com/svn/MH/trunk@7216 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-series-service-impl/pom.xml
+++ b/modules/matterhorn-series-service-impl/pom.xml
@@ -136,7 +136,7 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
-            <Export-Package> org.opencastproject.scheduler.* </Export-Package>
+            <Export-Package> org.opencastproject.series.* </Export-Package>
             <Import-Package>
               org.opencastproject.http,
               org.opencastproject.metadata.dublincore,
