MH-3942 added symlinks to startup/shutdown/update scripts
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7234 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/config_server.properties
+++ b/docs/felix/conf/config_server.properties
@@ -257,7 +257,7 @@ testMode=true
 
 # SEARCH
 # Dir to place the search index files in, recommend this is persistent and stable (default: {java.io.tmpdir}/opencast/searchindex)
-#search.searchindexdir = /tmp/opencast/searchindex
+#search.searchindexdir = ${java.io.tmpdir}/opencast/searchindex
 #remote.search = http://localhost:8081
 
 # MEDIA ANALYSIS
