--- a/docs/felix/conf/config.properties
+++ b/docs/felix/conf/config.properties
@@ -264,7 +264,7 @@ composer.threads = 1
 
 # SEARCH
 # Dir to place the search index files in, recommend this is persistent and stable (default: {java.io.tmpdir}/opencast/searchindex)
-#search.searchindexdir = /tmp/opencast/searchindex
+#search.searchindexdir = ${java.io.tmpdir}/opencast/searchindex
 #remote.search = http://localhost:8081
 
 # MEDIA ANALYSIS
