--- a/docs/felix/conf/config_admin.properties
+++ b/docs/felix/conf/config_admin.properties
@@ -255,7 +255,7 @@ remote.mediainspection = http://localhost:8081
 
 # SEARCH
 # Dir to place the search index files in, recommend this is persistent and stable (default: {java.io.tmpdir}/opencast/searchindex)
-#search.searchindexdir = /tmp/opencast/searchindex
+#search.searchindexdir = ${java.io.tmpdir}/opencast/searchindex
 remote.search = http://localhost:8082
 
 # MEDIA ANALYSIS
@@ -279,7 +279,7 @@ org.opencastproject.workflow.default.definition = full
 
 # INBOX
 # The path to the directory which will be scanned as the inbox
-org.opencastproject.inbox.inboxPath = /tmp/inbox-new
+org.opencastproject.inbox.inboxPath = ${java.io.tmpdir}/inbox-new
 # Time in seconds after which a file should be expected to be uploaded if its size did not increase.
 org.opencastproject.inbox.refreshTime = 30
 # Time in seconds how often the inbox dir should be checked for new files.
