--- a/docs/felix/conf/config_engage.properties
+++ b/docs/felix/conf/config_engage.properties
@@ -240,7 +240,7 @@ testMode=true
 
 # SEARCH
 # Dir to place the search index files in, recommend this is persistent and stable (default: {java.io.tmpdir}/opencast/searchindex)
-#search.searchindexdir = /tmp/opencast/searchindex
+#search.searchindexdir = ${java.io.tmpdir}/opencast/searchindex
 
 # WORKSPACE
 # Workspace root directory (recommend putting this somewhere backed up and permanent)
