--- a/modules/matterhorn-remote-api/pom.xml
+++ b/modules/matterhorn-remote-api/pom.xml
@@ -17,6 +17,10 @@
       <version>0.9-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>commons-collections</groupId>
+      <artifactId>commons-collections</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.servicemix.specs</groupId>
       <artifactId>org.apache.servicemix.specs.jaxb-api-2.1</artifactId>
     </dependency>
