MH-3970 -- fixed various issues with xml un/marshalling, which also fixes MH-3843.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7278 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-composer-service-impl/pom.xml
+++ b/modules/matterhorn-composer-service-impl/pom.xml
@@ -112,7 +112,17 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
-            <Import-Package> org.apache.commons.httpclient.*, *;resolution:=optional </Import-Package>
+            <Import-Package>
+              org.osgi.service.component.*,
+              org.apache.commons.httpclient.*,
+              org.opencastproject.media.mediapackage,
+              org.opencastproject.media.mediapackage.attachment,
+              org.opencastproject.media.mediapackage.dublincore,
+              org.opencastproject.media.mediapackage.identifier,
+              org.opencastproject.media.mediapackage.mpeg7,
+              org.opencastproject.media.mediapackage.track,
+              *;resolution:=optional
+            </Import-Package>
             <Private-Package> org.apache.xmlrpc.* </Private-Package>
             <Export-Package>org.opencastproject.composer.impl.*</Export-Package>
             <Embed-Dependency>xmlrpc-client;inline=true</Embed-Dependency>
