--- a/modules/matterhorn-remote-impl/pom.xml
+++ b/modules/matterhorn-remote-impl/pom.xml
@@ -97,7 +97,12 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
-            <Import-Package> *;resolution:=optional </Import-Package>
+            <Import-Package>
+              org.opencastproject.media.mediapackage,
+              org.opencastproject.media.mediapackage.attachment,
+              org.opencastproject.media.mediapackage.track,
+              *;resolution:=optional
+            </Import-Package>
             <Export-Package>org.opencastproject.remote.impl, org.opencastproject.remote.command</Export-Package>
             <Service-Component>
               OSGI-INF/receipt.xml,
