MH-3982 -- added an inbox scanner.  Files named inbox* are moved from the fileinstall watch directories and put into the working file repository's inbox collection
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7289 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-ingest-service-impl/pom.xml
+++ b/modules/matterhorn-ingest-service-impl/pom.xml
@@ -37,6 +37,11 @@
 			<artifactId>matterhorn-workspace-api</artifactId>
 			<version>0.9-SNAPSHOT</version>
 		</dependency>
+    <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-working-file-repository-service-api</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
@@ -213,6 +218,7 @@
 							OSGI-INF/ingest-service-local.xml,
 							OSGI-INF/ingest-service-remote.xml,
 							OSGI-INF/ingest-service-rest.xml,
+              OSGI-INF/inbox-scanner.xml,
               OSGI-INF/mediapackage-scanner.xml
             </Service-Component>
 						<JPA-PersistenceUnits>
