--- a/modules/matterhorn-composer-service-impl/pom.xml
+++ b/modules/matterhorn-composer-service-impl/pom.xml
@@ -80,6 +80,20 @@
       <artifactId>cxf-bundle-minimal</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.fileinstall</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.osgi.core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>org.osgi.compendium</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
@@ -128,6 +142,8 @@
             <Embed-Dependency>xmlrpc-client;inline=true</Embed-Dependency>
             <Service-Component>
               OSGI-INF/composer-service.xml,
+              OSGI-INF/encoderengine.xml,
+              OSGI-INF/profile-scanner.xml,
               OSGI-INF/composer-service-rest.xml
             </Service-Component>
           </instructions>
