MH-3301 -- Initial implementation for the ocr operation handler as well as work on the MPEG-7 extension for VideoText
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7311 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>modules/matterhorn-analysis-api</module>
         <module>modules/matterhorn-analysis-rest</module>
         <module>modules/matterhorn-analysis-dictionary</module>
+        <module>modules/matterhorn-analysis-text</module>
         <module>modules/matterhorn-analysis-videosegmenter</module>
         <module>modules/matterhorn-composer-service-api</module>
         <module>modules/matterhorn-composer-service-impl</module>
@@ -162,6 +163,7 @@
         <module>modules/matterhorn-analysis-api</module>
         <module>modules/matterhorn-analysis-rest</module>
         <module>modules/matterhorn-analysis-dictionary</module>
+        <module>modules/matterhorn-analysis-text</module>
         <module>modules/matterhorn-analysis-videosegmenter</module>
         <module>modules/matterhorn-caption-api</module>
         <module>modules/matterhorn-caption-impl</module>
