--- a/modules/matterhorn-composer-service-impl/src/main/resources/encodingprofiles.properties
+++ b/modules/matterhorn-composer-service-impl/src/main/resources/encodingprofiles.properties
@@ -102,7 +102,7 @@ profile.dvd-ntsc.http.mimetype = video/dvd
 profile.dvd-ntsc.http.ffmpeg.command = -i #{in.video.path} -target ntsc-dvd #{out.dir}/#{out.name}#{out.suffix}
 
 ####
-# Auxiliary movie formats.
+# Auxiliary movie and image formats.
 #
 # ATTENTION:
 # Do not change the identifier of the formats below. Media analysis and other services are relying on them.
@@ -131,6 +131,14 @@ profile.mjpeg.http.output = visual
 profile.mjpeg.http.suffix = -mjpeg.mov
 profile.mjpeg.http.mimetype = video/x-motion-jpeg
 profile.mjpeg.http.ffmpeg.command = -i #{in.video.path} -deinterlace -r 1 -vcodec mjpeg -qscale 1 -s 320x240 -an #{out.dir}/#{out.name}#{out.suffix}
+
+# Still images
+profile.image.http.name = still image
+profile.image.http.input = visual
+profile.image.http.output = image
+profile.image.http.suffix = .#{time}.jpg
+profile.image.http.mimetype = image/jpeg
+profile.image.http.ffmpeg.command = -y -i #{in.video.path} -r 1 -ss #{time} -vframes 1 -f image2 #{out.dir}/#{out.name}#{out.suffix}
 
 ####
 # Image formats, used for covers and slide previews.
