NOJIRA -- Added default encoding properties to the pom.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7313 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-distribution-service-common/pom.xml
+++ b/modules/matterhorn-distribution-service-common/pom.xml
@@ -4,6 +4,11 @@
   <groupId>org.opencastproject</groupId>
   <artifactId>matterhorn-distribution-service-common</artifactId>
   
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+  </properties>
+  
   <!--
   Note that this is not an OSGI bundle.
   
