MH-3831 -- changed demo capture agent to use both presentation/source and presenter/source for the video inputs
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7318 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
+++ b/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
@@ -139,7 +139,7 @@ capture.device.MOCK_SCREEN.buffer.time=1000000000
 #Create the presenter capture
 capture.device.MOCK_PRESENTER.src=${M2_REPO}/org/opencastproject/samples/camera/1.0/camera-1.0.mpg
 capture.device.MOCK_PRESENTER.outputfile=camera_out.mpg
-capture.device.MOCK_PRESENTER.flavor=presentation/source
+capture.device.MOCK_PRESENTER.flavor=presenter/source
 capture.device.MOCK_PRESENTER.codec=ffenc_mpeg2video
 capture.device.MOCK_PRESENTER.codec.bitrate=1024
 capture.device.MOCK_PRESENTER.codec.container=mpegtsmux
