--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,8 @@
         <module>modules/matterhorn-db</module>
         <module>modules/matterhorn-analysis-api</module>
         <module>modules/matterhorn-analysis-remote</module>
+        <module>modules/matterhorn-analysis-text-remote</module>
+        <module>modules/matterhorn-analysis-videosegmenter-remote</module>
         <module>modules/matterhorn-capture-admin-service-api</module>
         <module>modules/matterhorn-capture-admin-service-impl</module>
         <module>modules/matterhorn-composer-service-api</module>
