MH-2353, MH2299: add skiplinks to watch.html
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7332 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -1072,6 +1072,17 @@
       </roles>
       <timezone>+1</timezone>
     </developer>
+    <developer>
+      <id>aklassen</id>
+      <name>Andre Klassen</name>
+      <email>andre.klassen@uni-osnabrueck.de</email>
+      <organization>University of Osnabrueck</organization>
+      <organizationUrl>http://www.uni-osnabrueck.de/</organizationUrl>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>+1</timezone>
+    </developer>
   </developers>
 
   <contributors><!-- TODO? -->
