--- a/modules/matterhorn-conductor/pom.xml
+++ b/modules/matterhorn-conductor/pom.xml
@@ -137,7 +137,8 @@
               OSGI-INF/operations/publish.xml,
               OSGI-INF/operations/review.xml,
               OSGI-INF/operations/segment.xml,
-              OSGI-INF/operations/segmentpreviews.xml
+              OSGI-INF/operations/segmentpreviews.xml,
+              OSGI-INF/operations/textanalysis.xml
             </Service-Component>
           </instructions>
         </configuration>
