--- a/modules/matterhorn-distribution-service-youtube/pom.xml
+++ b/modules/matterhorn-distribution-service-youtube/pom.xml
@@ -23,6 +23,11 @@
       <version>0.9-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-remote-api</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
