--- a/docs/felix/conf/config_worker.properties
+++ b/docs/felix/conf/config_worker.properties
@@ -153,6 +153,9 @@ felix.auto.start.4= \
  file:${M2_REPO}/org/springframework/security/org.springframework.security.config/3.0.2.RELEASE/org.springframework.security.config-3.0.2.RELEASE.jar \
  file:${M2_REPO}/org/springframework/security/org.springframework.security.web/3.0.2.RELEASE/org.springframework.security.web-3.0.2.RELEASE.jar \
  file:${M2_REPO}/org/springframework/security/org.springframework.security.openid/3.0.2.RELEASE/org.springframework.security.openid-3.0.2.RELEASE.jar \
+ file:${M2_REPO}/org/springframework/security/spring-security-cas-client/3.0.2.RELEASE/spring-security-cas-client-3.0.2.RELEASE.jar \
+ file:${M2_REPO}/org/jasig/cas/com.springsource.org.jasig.cas.client/3.1.8/com.springsource.org.jasig.cas.client-3.1.8.jar \
+ file:${M2_REPO}/org/opensaml/com.springsource.org.opensaml/1.1.0/com.springsource.org.opensaml-1.1.0.jar \
  file:${M2_REPO}/org/apache/servicemix/bundles/org.apache.servicemix.bundles.asm/2.2.3_1/org.apache.servicemix.bundles.asm-2.2.3_1.jar \
  file:${M2_REPO}/org/apache/servicemix/bundles/org.apache.servicemix.bundles.commons-httpclient/3.1_4/org.apache.servicemix.bundles.commons-httpclient-3.1_4.jar \
  file:${M2_REPO}/org/apache/httpcomponents/httpcore-osgi/4.0.1/httpcore-osgi-4.0.1.jar \
