--- a/modules/matterhorn-security-impl/pom.xml
+++ b/modules/matterhorn-security-impl/pom.xml
@@ -30,6 +30,18 @@
       <artifactId>org.springframework.security.openid</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-cas-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jasig.cas</groupId>
+      <artifactId>com.springsource.org.jasig.cas.client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>com.springsource.org.opensaml</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.openid4java</groupId>
       <artifactId>com.springsource.org.openid4java</artifactId>
     </dependency>
@@ -82,12 +94,20 @@
             <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
             <Import-Package>
               javax.servlet,
+              org.jasig.cas.client.authentication,
+              org.jasig.cas.client.proxy,
+              org.jasig.cas.client.session,
+              org.jasig.cas.client.util,
+              org.jasig.cas.client.validation,
               org.springframework.dao,
               org.springframework.security,
               org.springframework.security.access,
               org.springframework.security.access.event,
               org.springframework.security.authentication,
               org.springframework.security.authentication.event,
+              org.springframework.security.cas,
+              org.springframework.security.cas.authentication,
+              org.springframework.security.cas.web,
               org.springframework.security.core,
               org.springframework.security.core.userdetails,
               org.springframework.security.core.userdetails.cache,
