--- a/modules/matterhorn-security-impl/pom.xml
+++ b/modules/matterhorn-security-impl/pom.xml
@@ -94,25 +94,25 @@
             <Bundle-SymbolicName> ${pom.artifactId} </Bundle-SymbolicName>
             <Import-Package>
               javax.servlet,
-              org.jasig.cas.client.authentication,
-              org.jasig.cas.client.proxy,
-              org.jasig.cas.client.session,
-              org.jasig.cas.client.util,
-              org.jasig.cas.client.validation,
+              org.jasig.cas.client.authentication;resolution:=optional,
+              org.jasig.cas.client.proxy;resolution:=optional,
+              org.jasig.cas.client.session;resolution:=optional,
+              org.jasig.cas.client.util;resolution:=optional,
+              org.jasig.cas.client.validation;resolution:=optional,
               org.springframework.dao,
               org.springframework.security,
               org.springframework.security.access,
               org.springframework.security.access.event,
               org.springframework.security.authentication,
               org.springframework.security.authentication.event,
-              org.springframework.security.cas,
-              org.springframework.security.cas.authentication,
-              org.springframework.security.cas.web,
+              org.springframework.security.cas;resolution:=optional,
+              org.springframework.security.cas.authentication;resolution:=optional,
+              org.springframework.security.cas.web;resolution:=optional,
               org.springframework.security.core,
               org.springframework.security.core.userdetails,
               org.springframework.security.core.userdetails.cache,
               org.springframework.security.core.userdetails.memory,
-              org.springframework.security.openid,
+              org.springframework.security.openid;resolution:=optional,
               org.springframework.security.web,
               org.springframework.security.web.authentication,
               org.springframework.security.web.authentication.www,
