MH-4079: Enabling confidence monitoring by default.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7355 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
+++ b/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
@@ -53,7 +53,10 @@ capture.cleaner.maxarchivaldays=1
 capture.confidence.video.location=${org.opencastproject.storage.dir}/volatile/
 
 # enable/disable confidence monitoring
-capture.confidence.enable=false
+capture.confidence.enable=true
+
+# enable/disable timestamps on confidence images
+capture.confidence.debug=true
 
 # The following lines create three example inputs for the capture agent, often
 # refered to as the "mock agent" for testing purposes.  Each input consists of:
