--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,7 @@
         <module>modules/matterhorn-capture-admin-service-api</module>
         <module>modules/matterhorn-capture-agent-api</module>
         <module>modules/matterhorn-capture-agent-impl</module>
+				<module>modules/matterhorn-confidence-monitoring-ui</module>
         <module>modules/matterhorn-security-api</module>
         <module>modules/matterhorn-security-impl</module>
         <module>modules/matterhorn-static</module>
