MH-3993 -- using apache tika to parse files in the WFR in order to discover their true content type (rather than relying on their filesystem extension, which might not be accurate).  We may want to add this to the media inspection service to determine accurate mime types, too.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7358 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -498,6 +498,12 @@
         <version>2.0.0-M6</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.tika</groupId>
+        <artifactId>tika-bundle</artifactId>
+        <version>0.7</version>
+      </dependency>
+
       <!-- OSGi -->
       <dependency>
         <groupId>org.osgi</groupId>
