--- a/docs/felix/conf/config_worker.properties
+++ b/docs/felix/conf/config_worker.properties
@@ -129,10 +129,7 @@ felix.auto.start.3= \
 
 # components
 felix.auto.start.4= \
- file:${M2_REPO}/org/apache/mina/mina-core/2.0.0-M6/mina-core-2.0.0-M6.jar \
- file:${M2_REPO}/org/apache/mina/mina-integration-jmx/2.0.0-M6/mina-integration-jmx-2.0.0-M6.jar \
- file:${M2_REPO}/org/apache/mina/mina-integration-ognl/2.0.0-M6/mina-integration-ognl-2.0.0-M6.jar \
- file:${M2_REPO}/org/apache/mina/mina-integration-beans/2.0.0-M6/mina-integration-beans-2.0.0-M6.jar \
+ file:${M2_REPO}/org/apache/tika/tika-bundle/0.7/tika-bundle-0.7.jar \
  file:${M2_REPO}/org/ops4j/pax/web/pax-web-jetty-bundle/0.7.1/pax-web-jetty-bundle-0.7.1.jar \
  file:${M2_REPO}/org/aopalliance/com.springsource.org.aopalliance/1.0.0/com.springsource.org.aopalliance-1.0.0.jar \
  file:${M2_REPO}/org/springframework/osgi/org.springframework.osgi.io/1.2.1/org.springframework.osgi.io-1.2.1.jar \
