MH-4094 -- combined inbox and mediapackage watch directories.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7373 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-ingest-service-impl/pom.xml
+++ b/modules/matterhorn-ingest-service-impl/pom.xml
@@ -218,8 +218,7 @@
 							OSGI-INF/ingest-service-local.xml,
 							OSGI-INF/ingest-service-remote.xml,
 							OSGI-INF/ingest-service-rest.xml,
-              OSGI-INF/inbox-scanner.xml,
-              OSGI-INF/mediapackage-scanner.xml
+              OSGI-INF/inbox-scanner.xml
             </Service-Component>
 						<JPA-PersistenceUnits>
 							org.opencastproject.ingest.endpoint
