--- a/modules/matterhorn-series-service-api/pom.xml
+++ b/modules/matterhorn-series-service-api/pom.xml
@@ -66,7 +66,7 @@
               org.opencastproject.metadata.dublincore,
               *;resolution:=optional
             </Import-Package>
-            <Export-Package> org.opencastproject.scheduler.api </Export-Package>
+            <Export-Package> org.opencastproject.series.api </Export-Package>
           </instructions>
         </configuration>
       </plugin>
