--- a/modules/matterhorn-capture-agent-impl/pom.xml
+++ b/modules/matterhorn-capture-agent-impl/pom.xml
@@ -132,6 +132,11 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.apache.servicemix.bundles</groupId>
       <artifactId>org.apache.servicemix.bundles.quartz</artifactId>
       <version>1.6.6_1</version>
@@ -210,6 +215,7 @@
               net.luniks.linux.jv4linfo,
               org.gstreamer,
               net.java.dev.jna,
+              org.json.*,
               net.fortuna.ical4j.*,
               ui.*
             </Private-Package>
@@ -217,6 +223,7 @@
               jv4linfo;inline=true,
               gstreamer-java;inline=true,
               jna;inline=true,
+              json_simple;inline=true,
               ical4j;inline=true,
             </Embed-Dependency>
             <Export-Package>
