Fix for MH-4106
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7388 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/config.properties
+++ b/docs/felix/conf/config.properties
@@ -210,7 +210,10 @@ obr.repository.url=http://felix.apache.org/obr/releases.xml
 
 ## GENERAL
 
+#This is the URL of the local matterhorn installation, in effect a pointer back to itself
 org.opencastproject.server.url=http://localhost:8080
+#This is the directory where the system will store its processed files (including temporary files).
+#This directory should be persistent between reboots (ie, not /tmp)
 org.opencastproject.storage.dir=${java.io.tmpdir}/opencast
 org.opencastproject.security.config=conf/security.xml
 org.opencastproject.security.digest.user=matterhorn_system_account
