--- a/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
+++ b/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
@@ -1,5 +1,11 @@
 # Please note that the intervals and times specified in this file are in *seconds*
 
+# The URL of the central core.  This assumes that all services are running on the same machine.
+# The above assumption might not be correct.  If so then replace the appropriate keys below with your urls.
+org.opencastproject.capture.core.url=${org.opencastproject.server.url}
+
+### Required variables start here (the agent will behave oddly without them) ###
+
 # The URL of the caching directory under the root directory
 capture.filesystem.cache.url=${org.opencastproject.storage.dir}/cache/
 # The URL of the volatile directory under the root directory
@@ -8,7 +14,7 @@ capture.filesystem.volatile.url=${org.opencastproject.storage.dir}/volatile/
 capture.filesystem.cache.capture.url=${capture.filesystem.cache.url}/captures/
 
 # The remote URL where the capture schedule should be retrieved
-capture.schedule.remote.endpoint.url=${org.opencastproject.server.url}/scheduler/rest/getCalendarForCaptureAgent
+capture.schedule.remote.endpoint.url=${org.opencastproject.capture.core.url}/scheduler/rest/getCalendarForCaptureAgent
 # The time between attempts to fetch updated calendar data
 capture.schedule.remote.polling.interval=60
 # The local URL of the cached copy of the capture schedule
@@ -24,17 +30,17 @@ capture.config.cache.url=${capture.filesystem.cache.url}/capture.properties
 # The name of the agent
 capture.agent.name=demo_capture_agent
 # The URL of the remote state service
-capture.agent.state.remote.endpoint.url=${org.opencastproject.server.url}/capture-admin/rest/agents
+capture.agent.state.remote.endpoint.url=${org.opencastproject.capture.core.url}/capture-admin/rest/agents
 # The time between attempts to push the agent's state to the state service
 capture.agent.state.remote.polling.interval=10
 # The time between attempts to push the agent's capabilities to the state service
 capture.agent.capabilities.remote.polling.interval=10
 
 # The URL of the remote recording state service
-capture.recording.state.remote.endpoint.url=${org.opencastproject.server.url}/capture-admin/rest/recordings
+capture.recording.state.remote.endpoint.url=${org.opencastproject.capture.core.url}/capture-admin/rest/recordings
 
 # The URL to send the capture data to during ingest
-capture.ingest.endpoint.url=${org.opencastproject.server.url}/ingest/rest/addZippedMediaPackage
+capture.ingest.endpoint.url=${org.opencastproject.capture.core.url}/ingest/rest/addZippedMediaPackage
 # The retry interval for attempting ingest
 capture.ingest.retry.interval=300
 
@@ -57,6 +63,10 @@ capture.confidence.enable=true
 
 # enable/disable timestamps on confidence images
 capture.confidence.debug=true
+
+### Required variables end here ###
+
+### Capture device definitions ###
 
 # The following lines create three example inputs for the capture agent, often
 # refered to as the "mock agent" for testing purposes.  Each input consists of:
