MH-3301 -- added videotext to search index
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7394 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/config.properties
+++ b/docs/felix/conf/config.properties
@@ -265,8 +265,13 @@ composer.threads = 1
 # Dir to place the search index files in, recommend this is persistent and stable (default: {java.io.tmpdir}/opencast/searchindex)
 #search.searchindexdir = ${java.io.tmpdir}/opencast/searchindex
 
-# MEDIA ANALYSIS
+# VIDEO SEGMENTATION
 videosegmenter.threads = 1
+
+# TEXT ANALYSIS
+# Configuration for the org.opencastproject.analysis.text.ocropus.OcropusTextAnalyzer binary (default: /usr/local/bin/ocrocmd)
+#textanalyzer.ocrocmd= /usr/local/bin/ocrocmd
+textanalyzer.threads = 1
 
 # WORKING FILE REPOSITORY
 org.opencastproject.file.repo.path=${org.opencastproject.storage.dir}/files
