--- a/docs/felix/conf/config_worker.properties
+++ b/docs/felix/conf/config_worker.properties
@@ -234,8 +234,13 @@ testMode=true
 #composer.ffmpegpath = /usr/local/bin/ffmpeg
 composer.threads = 1
 
-# MEDIA ANALYSIS
+# VIDEO SEGMENTATION
 videosegmenter.threads = 1
+
+# TEXT ANALYSIS
+# Configuration for the org.opencastproject.analysis.text.ocropus.OcropusTextAnalyzer binary (default: /usr/local/bin/ocrocmd)
+#textanalyzer.ocrocmd= /usr/local/bin/ocrocmd
+textanalyzer.threads = 1
 
 # INSPECTION
 # Class to use for analyzing media (default: org.opencastproject.inspection.impl.MediaInfoAnalyzer)
