--- a/docs/felix/conf/encoding/default-profiles.properties
+++ b/docs/felix/conf/encoding/default-profiles.properties
@@ -51,19 +51,28 @@ profile.flash.http.input = stream
 profile.flash.http.output = visual
 profile.flash.http.suffix = -25fps.flv
 profile.flash.http.mimetype = video/x-flv
-profile.flash.http.ffmpeg.command.video = -i #{in.video.path} -y -r 25 -vcodec flv -b 800000 -qscale 3.5 -ar 44100
+profile.flash.http.ffmpeg.command.video = -i #{in.video.path} -y -r 25 -vcodec flv -b 800000 -qscale 3.5 -ar 44100 -deinterlace
 profile.flash.http.ffmpeg.command.audio = -i #{in.audio.path} -ar 44100
 profile.flash.http.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{out.suffix}
 
 # Distribution format definition for 4 by 3 flash presenter/presentation download
-profile.flash.http.name = flash download
-profile.flash.http.input = stream
-profile.flash.http.output = visual
-profile.flash.http.suffix = -25fps.flv
-profile.flash.http.mimetype = video/x-flv
-profile.flash.http.ffmpeg.command.video = -i #{in.video.path} -y -r 25 -vcodec flv -b 800000 -qscale 3.5 -ar 44100
-profile.flash.http.ffmpeg.command.audio = -i #{in.audio.path} -ar 44100
-profile.flash.http.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{out.suffix}
+profile.flash.vga.name = flash download
+profile.flash.vga.input = stream
+profile.flash.vga.output = visual
+profile.flash.vga.suffix = -10fps.flv
+profile.flash.vga.mimetype = video/x-flv
+profile.flash.vga.ffmpeg.command.video = -i #{in.video.path} -y -r 10 -vcodec flv -b 800000 -qscale 3.5 -ar 44100
+profile.flash.vga.ffmpeg.command.audio = -i #{in.audio.path} -ar 44100
+profile.flash.vga.ffmpeg.command = #{video} #{audio} #{out.dir}/#{out.name}#{out.suffix}
+
+# Distribution format definition for 4 by 3 flash presenter/presentation download
+profile.mp3.http.name = mp3 download
+profile.mp3.http.input = stream
+profile.mp3.http.output = audio
+profile.mp3.http.suffix = -audio.mp3
+profile.mp3.http.mimetype = audio/mp3
+profile.mp3.http.ffmpeg.command.audio = -i #{in.audio.path} -ar 44100 -ab 128k
+profile.mp3.http.ffmpeg.command = #{audio} #{out.dir}/#{out.name}#{out.suffix}
 
 # Format definition for 3 by 4 flash presenter/presentation preview in Matterhorn UIs
 profile.flash-preview.http.name = flash preview
@@ -113,16 +122,16 @@ profile.dvd-ntsc.http.ffmpeg.command = -i #{in.video.path} -target ntsc-dvd #{ou
 profile.engage-cover.http.name = cover image for engage
 profile.engage-cover.http.input = visual
 profile.engage-cover.http.output = image
-profile.engage-cover.http.suffix = .jpg
+profile.engage-cover.http.suffix = -engage.jpg
 profile.engage-cover.http.mimetype = image/jpeg
 #profile.engage-cover.http.ffmpeg.command = -i #{in.video.path} -y -r 1 -ss #{time} -s 160x120 #{out.dir}/#{out.name}#{out.suffix}
-profile.engage-cover.http.ffmpeg.command = -y -i #{in.video.path} -r 1 -ss #{time} -vframes 1 -s 160x120 -f image2 #{out.dir}/#{out.name}#{out.suffix}
+profile.engage-cover.http.ffmpeg.command = -y -i #{in.video.path} -r 1 -ss #{time} -vframes 1 -s 320x240 -f image2 #{out.dir}/#{out.name}#{out.suffix}
 
 # Cover image feeds
 profile.feed-cover.http.name = cover image for feeds
 profile.feed-cover.http.input = visual
 profile.feed-cover.http.output = image
-profile.feed-cover.http.suffix = .jpg
+profile.feed-cover.http.suffix = -feed.jpg
 profile.feed-cover.http.mimetype = image/jpeg
 #profile.feed-cover.http.ffmpeg.command = -i #{in.video.path} -y -r 1 -ss #{time} -s 72x54 #{out.dir}/#{out.name}#{out.suffix}
 profile.feed-cover.http.ffmpeg.command = -y -i #{in.video.path} -r 1 -ss #{time} -vframes 1 -s 72x54 -f image2 #{out.dir}/#{out.name}#{out.suffix}
