--- a/modules/matterhorn-dictionary-api/pom.xml
+++ b/modules/matterhorn-dictionary-api/pom.xml
@@ -2,9 +2,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.opencastproject</groupId>
-  <artifactId>matterhorn-analysis-dictionary</artifactId>
+  <artifactId>matterhorn-dictionary-api</artifactId>
   <packaging>bundle</packaging>
-  <name>matterhorn-analysis-dictionary</name>
+  <name>matterhorn-dictionary-api</name>
   <version>0.9-SNAPSHOT</version>
   <parent>
     <groupId>org.opencastproject</groupId>
@@ -24,18 +24,6 @@
     <dependency>
       <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-mpeg7</artifactId>
-      <version>0.9-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-remote-api</artifactId>
-      <version>0.9-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.opencastproject</groupId>
-      <artifactId>matterhorn-workspace-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
 
@@ -104,13 +92,8 @@
           <instructions>
             <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
             <Export-Package>
-              org.opencastproject.analysis.dictionary,
-              org.opencastproject.analysis.dictionary.endpoint
+              org.opencastproject.dictionary.api
             </Export-Package>
-            <Service-Component>
-              OSGI-INF/dictionary-rest.xml,
-              OSGI-INF/dictionary-service.xml
-            </Service-Component>
           </instructions>
         </configuration>
       </plugin>
