MH-3619: Implemented DictionaryService interface as an extension of analysis service interface.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7405 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-dictionary-api/pom.xml
+++ b/modules/matterhorn-dictionary-api/pom.xml
@@ -26,6 +26,12 @@
       <artifactId>matterhorn-mpeg7</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
+    
+    <dependency>
+    	<groupId>org.opencastproject</groupId>
+    	<artifactId>matterhorn-analysis-api</artifactId>
+    	<version>0.9-SNAPSHOT</version>
+    </dependency>
 
     <!--  Thirdparty dependencies -->
 
