--- a/modules/matterhorn-conductor/pom.xml
+++ b/modules/matterhorn-conductor/pom.xml
@@ -45,6 +45,11 @@
     </dependency>
     <dependency>
       <groupId>org.opencastproject</groupId>
+      <artifactId>matterhorn-ingest-service-api</artifactId>
+      <version>0.9-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opencastproject</groupId>
       <artifactId>matterhorn-composer-service-api</artifactId>
       <version>0.9-SNAPSHOT</version>
     </dependency>
@@ -122,6 +127,7 @@
             </Export-Package>
             <Service-Component>
               OSGI-INF/workflow-definition-scanner.xml,
+              OSGI-INF/operations/caption.xml,
               OSGI-INF/operations/compose.xml,
               OSGI-INF/operations/distribute-download.xml,
               OSGI-INF/operations/distribute-streaming.xml,
