MH-4174 -- fixed dist-stub profile
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7469 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,7 @@
       <modules>
         <module>modules/matterhorn-db</module>
         <module>modules/matterhorn-distribution-service-api</module>
+        <module>modules/matterhorn-distribution-service-remote</module>
         <module>modules/matterhorn-distribution-service-download-remote</module>
         <module>modules/matterhorn-distribution-service-itunesu-remote</module>
         <module>modules/matterhorn-distribution-service-streaming-remote</module>
