MH-4160: Updated gstreamer-java from 1.2 to 1.4
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7470 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/modules/matterhorn-capture-agent-impl/pom.xml
+++ b/modules/matterhorn-capture-agent-impl/pom.xml
@@ -71,8 +71,8 @@
     </dependency>
     <dependency>
       <groupId>org.gstreamer</groupId>
-      <artifactId>gstreamer-java</artifactId>
-      <version>1.2</version>
+      <artifactId>gstreamer-java-notests</artifactId>
+      <version>1.4</version>
     </dependency>
     <dependency>
       <groupId>net.java.dev.jna</groupId>
