NOJIRA: Documented how to properly setup H.264 encoding profiles.
git-svn-id: http://opencast.jira.com/svn/MH/trunk@7476 e6edf6fb-f266-4316-afb4-e53d95876a76

--- a/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
+++ b/docs/felix/conf/services/org.opencastproject.capture.impl.ConfigurationManager.properties
@@ -109,11 +109,20 @@ capture.confidence.debug=true
 #
 # Known good codecs include:
 #     MPEG2: "ffenc_mpeg2video" with values in bits/sec
-#     H264: "x264enc" with values in kilobits/sec
+#     H264: "x264enc" *does not use bitrate, see below
 #     Ogg Theora: "theoraenc" with values in kilobits/sec
 #     MP2 Audio: "twolame" with values in kilobits/sec
 #     MP3: "lame" with values in kilobits/sec
 #     Ogg Vorbis: "vorbisenc" with values in bits/sec
+#
+# *H.264 encoding works by using a constant quantizer instead of a constant
+# bitrate. Therefore instead of using .bitrate use .quantizer:
+# 		capture.device.audience_camera.codec=x264enc
+#			capture.device.audience_camera.codec.quantizer=21
+# 		capture.device.audience_camera.container=mp4mux
+# The quantizer value for the x264enc element is a value from 1 - 50 (default: 21)
+# and it determines how much data is to be removed from each frame when encoding. 
+# Lower quantizer values will produce more detailed videos, but with larger file sizes.
 #
 # Known good containers include:
 #     MPEG2 Transport Steam: "mpegtsmux"
